*Change recount icon skins again, this time de-saturate them to match the skin.
*Throttle the number of times a user can send the version of ElvUI he's using to a maximum of one time per 12 seconds to cut back on lag when first joining BG/Raid groups.
*The UIScale option inside ElvUI has been removed. Use the blizzard option if you wish to scale the UI. 
*Changing the UIScale should now prompt you to reloadui.
*Profession bags should now appear to be different colors depending on the type of bag.
*Frequent updates are no longer being used for on the power bar for the Party, Raid 6-25, Raid 26-40 groups. This should greatly increase performance inside a raid setting.
*Prevent the Resurrection Icon from ever displaying on a unit with health, this is a workaround for the Blizzard bug that has been reported several times but has failed to become fixed.

[b]Fixes:[/b]
*Fix action buttons being used while repositioning buttons.
*Add sanity check to unitframes. Users were able to attach buffs frame to debuffs frame and vice versa at the same time, causing the UI not to load properly on the next load. Adding a warning to the chat frame when a user attempts to do this, and forcing the anchor to the actual unitframe when it occurs to prevent users from making this mistake.
*Fix skada lua error when repeatedly setting embed right to skada.
*Reverting font outline to how it was in previous versions.
*Fix default bank search function not working with skin.
*Fix achievement points not displaying on achievement window due to skin.
*Character frame should no longer be skinned when the misc skin box is checked and the character frame skin is disabled.
*Fix issue with unitframe combat fade not working as intended.
*Fix "Loop in Gettable" lua error for the power bar when blizzards function returns a nil value.
*Fix an issue with the auras mover, after moving the frame once the next time you go to move it the auras would become "unattached" from the mover.