@@ -27,6 +27,7 @@
 *Throttle the number of times a user can send the version of ElvUI he's using to a maximum of one time per 12 seconds to cut back on lag when first joining BG/Raid groups.
 *The UIScale option inside ElvUI has been removed. Use the blizzard option if you wish to scale the UI. 
 *Changing the UIScale should now prompt you to reloadui.
+*Changing the UIScale while autoscale is still enabled will prompt you to disable the autoscale option.
 *Profession bags should now appear to be different colors depending on the type of bag.
 *Frequent updates are no longer being used for on the power bar for the Party, Raid 6-25, Raid 26-40 groups. This should greatly increase performance inside a raid setting.
 *Prevent the Resurrection Icon from ever displaying on a unit with health, this is a workaround for the Blizzard bug that has been reported several times but has failed to become fixed.
